# from_jupyter_to_deploy

./: .env  README.md  docker-compose.debug.yml  docker-compose.yml  dockerfile-setup  pyproject.toml  requirements.txt
.github/workflows/: main.yml
API/: dockerfile
API/app/: config.py  model.py  routes.py
api/: dockerfile  requirements.txt
api/.github/workflows/: main.yml
api/app/: config.py  main.py  schema.py
api/tests/: tests.py
create_database_sql/: 02-produtos.sql  database.py  docker-compose.yml
database/: dockerfile  requirements.txt  setup_database_script.py
database_test/: 01-table_produtos.sql  docker-compose.yml  dockerfile  table_produtos.sql
streamlit/: Dockerfile  main.py  requirements.txt
